apariencia tables de gestion productos

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,7 +49,7 @@ body{
 
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: 20px;
 }
 .edit-box{
@@ -60,11 +60,26 @@ body{
     align-items: center;
     gap: 20px;
 }
-.tab-pane{
+/* .tab-pane{  
     height: 400px;
     overflow-y: auto !important;
     overflow-x: hidden !important;
+} */
+
+table{ display: block; width: auto !important;}
+
+table {    
+    height: 300px;    
+    overflow-y: auto;
+    overflow-x: hidden;
 }
+thead {
+    background-color: var(--color8);
+    position: sticky;
+    top: 0;
+}
+
+
 .sidebar{
     grid-area: sidebar;
     background-color:var(--color1);
